javadoc and cleanup